test/compile_error/illegaldate.conf.def
config illegal_date_conf {
	dateval : time(2004/13/32);
}
